unpackaged/main/default/objects/Account/fields/Account_External_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_External_ID__c</fullName>
    <description>Account External ID from Legacy system. For DM purpose</description>
    <externalId>true</externalId>
    <label>Account External ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>