unpackaged/main/default/objects/Account/fields/Amount_Invested__c.field-meta.xml
<CustomField>
    <fullName>Amount_Invested__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Total loan amount allocated to investor. Field is updated by allocation process.</description>
    <inlineHelpText>Total loan amount allocated to investor. Field is updated by allocation process.</inlineHelpText>
    <label>Amount Invested</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>