unpackaged/main/default/objects/Account/fields/Annual_Available_Balance__c.field-meta.xml
<CustomField>
    <fullName>Annual_Available_Balance__c</fullName>
    <description>Formula that finds difference between Annual Funded Cap and Total Funded YTD.</description>
    <formula>Annual_Funded_Cap__c -  Total_Funded_YTD__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula that finds difference between Annual Funded Cap and Total Funded YTD.</inlineHelpText>
    <label>Annual Available Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>