unpackaged/main/default/objects/Account/fields/Annual_Funded_Cap__c.field-meta.xml
<CustomField>
    <fullName>Annual_Funded_Cap__c</fullName>
    <description>Maximum amount of loan dollars that can be allocated to investor for the year. Field is manually set.</description>
    <inlineHelpText>Maximum amount of loan dollars that can be allocated to investor for the year. Field is manually set.</inlineHelpText>
    <label>Annual Funded Cap</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>