unpackaged/main/default/objects/Account/fields/Annual_Individual_Income__c.field-meta.xml
<CustomField>
    <fullName>Annual_Individual_Income__c</fullName>
    <label>Annual Individual Income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>