unpackaged/main/default/objects/Account/fields/Authorized_User__c.field-meta.xml
<CustomField>
    <fullName>Authorized_User__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Authorized User</label>
    <type>Checkbox</type>
</CustomField>