unpackaged/main/default/objects/Account/fields/Balance_Difference__c.field-meta.xml
<CustomField>
    <fullName>Balance_Difference__c</fullName>
    <formula>Credits__c -  Debits__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Balance Difference</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>