unpackaged/main/default/objects/Account/fields/Bankrupt__c.field-meta.xml
<CustomField>
    <fullName>Bankrupt__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If values is TRUE than All the CL Contract associated to account will marked as Bankrupt</description>
    <inlineHelpText>If values is TRUE than All the CL Contract associated to account will marked as Bankrupt</inlineHelpText>
    <label>Bankrupt</label>
    <type>Checkbox</type>
</CustomField>