unpackaged/main/default/objects/Account/fields/Borrower_s_Email__c.field-meta.xml
<CustomField>
    <fullName>Borrower_s_Email__c</fullName>
    <description>/*Created By Nupur */
For Email Alert</description>
    <formula>IF( RecordType.Name='Member',ints__Email__c , Null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Borrower's Email</label>
    <type>Text</type>
</CustomField>