unpackaged/main/default/objects/Account/fields/Borrower_s_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Borrower_s_First_Name__c</fullName>
    <description>/* Created By Nupur */

For Email Templates</description>
    <formula>IF( RecordType.Name='Member' ,  peer__First_Name__c ,NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Borrower's First Name</label>
    <type>Text</type>
</CustomField>