unpackaged/main/default/objects/Account/fields/Borrower_s_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Borrower_s_Last_Name__c</fullName>
    <description>/*Created by Nupur */
 - For Email Templates</description>
    <formula>IF( RecordType.Name='Member' , peer__Last_Name__c,NULL)</formula>
    <label>Borrower's Last Name</label>
    <type>Text</type>
</CustomField>