unpackaged/main/default/objects/Account/fields/BoxFolderID__c.field-meta.xml
<CustomField>
    <fullName>BoxFolderID__c</fullName>
    <label>BoxFolderID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>