unpackaged/main/default/objects/Account/fields/Bureau_Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Bureau_Date_of_Birth__c</fullName>
    <label>Bureau Date of Birth</label>
    <type>Date</type>
</CustomField>