unpackaged/main/default/objects/Account/fields/Bureau_Social_Security__c.field-meta.xml
<CustomField>
    <fullName>Bureau_Social_Security__c</fullName>
    <label>Bureau Social Security</label>
    <length>255</length>
    <type>Text</type>
</CustomField>