unpackaged/main/default/objects/Account/fields/clcommon__Direct_Proposed_Exposure__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Direct_Proposed_Exposure__c</fullName>
    <description>Total amount of credit extended to the borrower, plus any loan opportunities currently being underwritten</description>
    <inlineHelpText>Total amount of credit extended to the borrower, plus any loan opportunities currently being underwritten</inlineHelpText>
    <label>Direct Proposed Exposure</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>