unpackaged/main/default/objects/Account/fields/clcommon__Last_Modified_Date_Exposure__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Last_Modified_Date_Exposure__c</fullName>
    <description>Last date on which credit exposure was calculated</description>
    <inlineHelpText>Last date on which credit exposure was calculated</inlineHelpText>
    <label>Last Modified Date(Exposure)</label>
    <type>DateTime</type>
</CustomField>