unpackaged/main/default/objects/Account/fields/clcommon__Summary__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Summary__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Selection indicates that the record is a summary transaction record for data archival purpose. This is automatically updated by the system. Do no update it manually.</inlineHelpText>
    <label>Summary</label>
    <type>Checkbox</type>
</CustomField>