unpackaged/main/default/objects/Account/fields/cnotify__Email__c.field-meta.xml
<CustomField>
    <fullName>cnotify__Email__c</fullName>
    <label>Email</label>
    <type>Email</type>
</CustomField>