unpackaged/main/default/objects/Account/fields/collect__Disable_Collection_Activities__c.field-meta.xml
<CustomField>
    <fullName>collect__Disable_Collection_Activities__c</fullName>
    <defaultValue>false</defaultValue>
    <description>It will disable all the Collection Activities for this Account.</description>
    <inlineHelpText>Check it if you want to disable Collection Activities for this Account.</inlineHelpText>
    <label>Disable Collection Activities</label>
    <type>Checkbox</type>
</CustomField>