unpackaged/main/default/objects/Account/fields/collect__External_ID__c.field-meta.xml
<CustomField>
    <fullName>collect__External_ID__c</fullName>
    <description>Reference for connected external Account/ Customer</description>
    <externalId>true</externalId>
    <label>External ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>