unpackaged/main/default/objects/Account/fields/collect__Invalid_Address__c.field-meta.xml
<CustomField>
    <fullName>collect__Invalid_Address__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Address is invalid or not</description>
    <label>Invalid Address</label>
    <type>Checkbox</type>
</CustomField>