unpackaged/main/default/objects/Account/fields/collect__Invalid_Email__c.field-meta.xml
<CustomField>
    <fullName>collect__Invalid_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Email is invalid or not</description>
    <label>Invalid Email</label>
    <type>Checkbox</type>
</CustomField>