unpackaged/main/default/objects/Account/fields/collect__Invalid_Number__c.field-meta.xml
<CustomField>
    <fullName>collect__Invalid_Number__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Contact Number is invalid or not</description>
    <label>Invalid Number</label>
    <type>Checkbox</type>
</CustomField>