unpackaged/main/default/objects/Account/fields/collect__SLAExpirationDate__c.field-meta.xml
<CustomField>
    <fullName>collect__SLAExpirationDate__c</fullName>
    <label>SLA Expiration Date</label>
    <type>Date</type>
</CustomField>