unpackaged/main/default/objects/Account/fields/Current_Month_s_Available_Allocation__c.field-meta.xml
<CustomField>
    <fullName>Current_Month_s_Available_Allocation__c</fullName>
    <description>Formula that finds difference between Monthly Allocation Cap and Total Allocations MTD for investor. If value is zero, no more applications will be allocated during the month.</description>
    <formula>Monthly_Allocation_Cap__c -  Total_Allocations_MTD__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula that finds difference between Monthly Allocation Cap and Total Allocations MTD for investor. If value is zero, no more applications will be allocated during the month.</inlineHelpText>
    <label>Current Month's Available Allocation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>