unpackaged/main/default/objects/Account/fields/Current_Month_s_Available_Funded_Balance__c.field-meta.xml
<CustomField>
    <fullName>Current_Month_s_Available_Funded_Balance__c</fullName>
    <description>Formula that finds difference between Monthly Funded Cap and Total Funded MTD</description>
    <formula>Monthly_Funded_Cap__c -  Total_Funded_MTD__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula that finds difference between Monthly Funded Cap and Total Funded MTD</inlineHelpText>
    <label>Current Month's Available Funded Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>