unpackaged/main/default/objects/Account/fields/DCP_Allowed__c.field-meta.xml
<CustomField>
    <fullName>DCP_Allowed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DCP Allowed</label>
    <type>Checkbox</type>
</CustomField>