unpackaged/main/default/objects/Account/fields/Debits__c.field-meta.xml
<CustomField>
    <fullName>Debits__c</fullName>
    <label>Debits</label>
    <summarizedField>Yodlee_User_Transaction__c.Debit__c</summarizedField>
    <summaryFilterItems>
        <field>Yodlee_User_Transaction__c.isLatest__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Yodlee_User_Transaction__c.Yodlee_Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>