unpackaged/main/default/objects/Account/fields/Funding_Partner__c.field-meta.xml
<CustomField>
    <fullName>Funding_Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Funding Partner</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.loan__Investor__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>$Source.Id</field>
            <operation>notEqual</operation>
            <valueField>Account.Id</valueField>
        </filterItems>
        <filterItems>
            <field>Account.Is_Funding_Partner__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>