unpackaged/main/default/objects/Account/fields/Housing_Status__c.field-meta.xml
<CustomField>
    <fullName>Housing_Status__c</fullName>
    <label>Housing Status</label>
    <length>150</length>
    <type>Text</type>
</CustomField>