unpackaged/main/default/objects/Account/fields/Income_Variance__c.field-meta.xml
<CustomField>
    <fullName>Income_Variance__c</fullName>
    <label>Income Variance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>