unpackaged/main/default/objects/Account/fields/ints__Email__c.field-meta.xml
<CustomField>
    <fullName>ints__Email__c</fullName>
    <description>email for yodlee fastlink2.0</description>
    <label>Email</label>
    <type>Email</type>
</CustomField>