unpackaged/main/default/objects/Account/fields/Investment_Rules__c.field-meta.xml
<CustomField>
    <fullName>Investment_Rules__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Investment Rules</label>
    <referenceTo>genesis__Rule__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>