unpackaged/main/default/objects/Account/fields/Investor_Alloted_Weight__c.field-meta.xml
<CustomField>
    <fullName>Investor_Alloted_Weight__c</fullName>
    <description>Allotted weight for investor to manage allocation routine. Field is manually set.</description>
    <inlineHelpText>Allotted weight for investor to manage allocation routine. Field is manually set.</inlineHelpText>
    <label>Investor Alloted Weight</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>