unpackaged/main/default/objects/Account/fields/Investor_Current_Weight__c.field-meta.xml
<CustomField>
    <fullName>Investor_Current_Weight__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Current weight for investor used to manage allocation routine. Field is updated by allocation process.</description>
    <inlineHelpText>Current weight for investor used to manage allocation routine. Field is updated by allocation process.</inlineHelpText>
    <label>Investor Current Weight</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>