unpackaged/main/default/objects/Account/fields/Is_Funding_Partner__c.field-meta.xml
<CustomField>
    <fullName>Is_Funding_Partner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Funding Partner</label>
    <type>Checkbox</type>
</CustomField>