unpackaged/main/default/objects/Account/fields/Last_Application_assigned_on__c.field-meta.xml
<CustomField>
    <fullName>Last_Application_assigned_on__c</fullName>
    <label>Last Application assigned on</label>
    <type>DateTime</type>
</CustomField>