unpackaged/main/default/objects/Account/fields/Lending_Partner__c.field-meta.xml
<CustomField>
    <fullName>Lending_Partner__c</fullName>
    <formula>Funding_Partner__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lending Partner</label>
    <type>Text</type>
</CustomField>