unpackaged/main/default/objects/Account/fields/loan__Branch__c.field-meta.xml
<CustomField>
    <fullName>loan__Branch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Branch</label>
    <referenceTo>loan__Office_Name__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>