unpackaged/main/default/objects/Account/fields/loan__Collect_Service_Fees_on__c.field-meta.xml
<CustomField>
    <fullName>loan__Collect_Service_Fees_on__c</fullName>
    <description>Service Fee Strategy on account</description>
    <inlineHelpText>Select the components of investor payments on which service fees is to be charged. Default value is taken from "Fractionalization Parameters" custom setting. If "No Fees" is selected, no service fee will be calculated on investor payments.</inlineHelpText>
    <label>Collect Service Fees on</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Principal</fullName>
            </value>
            <value>
                <fullName>Interest</fullName>
            </value>
            <value>
                <fullName>Fees</fullName>
            </value>
            <value>
                <fullName>No Fees</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>