unpackaged/main/default/objects/Account/fields/loan__Investor_Type__c.field-meta.xml
<CustomField>
    <fullName>loan__Investor_Type__c</fullName>
    <label>Investor Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Individual</fullName>
            </value>
            <value>
                <fullName>Institutional</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>