unpackaged/main/default/objects/Account/fields/loan__SOCIAL_SECURITY_NUMBER__c.field-meta.xml
<CustomField>
    <fullName>loan__SOCIAL_SECURITY_NUMBER__c</fullName>
    <label>SOCIAL_SECURITY_NUMBER</label>
    <length>128</length>
    <type>Text</type>
</CustomField>